--- a/app/src/main/res/layout/add_note.xml
+++ b/app/src/main/res/layout/add_note.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="@string/note_hint"
-        android:inputType="textPersonName"
+        android:inputType="textNoSuggestions|textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/btnConfirmDeleteTrip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
