--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,6 +20,7 @@
             android:layout_marginEnd="32dp"
             android:ems="10"
             android:hint="@string/name_hint"
+            android:inputType="textNoSuggestions"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +44,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="@string/email"
-            android:inputType="textEmailAddress"
+            android:inputType="textNoSuggestions|textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/edtTextSignupName"
             app:layout_constraintStart_toStartOf="@+id/edtTextSignupName"
             app:layout_constraintTop_toBottomOf="@+id/edtTextSignupName" />
@@ -55,7 +56,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="@string/pass"
-            android:inputType="textPassword"
+            android:inputType="textNoSuggestions|textPassword"
             app:layout_constraintEnd_toEndOf="@+id/edtTextSignupEmail"
             app:layout_constraintStart_toStartOf="@+id/edtTextSignupEmail"
             app:layout_constraintTop_toBottomOf="@+id/edtTextSignupEmail" />
@@ -67,7 +68,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="@string/confirm_pass"
-            android:inputType="textPassword"
+            android:inputType="textNoSuggestions|textPassword"
             app:layout_constraintEnd_toEndOf="@+id/edtTextSignupPassword"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/edtTextSignupPassword"
