--- a/app/src/main/res/layout/add_trip.xml
+++ b/app/src/main/res/layout/add_trip.xml
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/trip_name_hint"
-            android:inputType="textPersonName"
+            android:inputType="textNoSuggestions|textPersonName"
             app:layout_constraintStart_toStartOf="@+id/txtViewTripName"
             app:layout_constraintTop_toBottomOf="@+id/txtViewTripName" />
 
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/trip_description_hint"
-            android:inputType="textPersonName"
+            android:inputType="textNoSuggestions|textPersonName"
             app:layout_constraintStart_toStartOf="@+id/txtViewTripDescription"
             app:layout_constraintTop_toBottomOf="@+id/txtViewTripDescription" />
 
