load profile picture only if changed, fix press backbutton behavior

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -82,7 +82,7 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/rounded_corner"
             android:fontFamily="sans-serif-medium"
-            android:text="Sign Up"
+            android:text="@string/signup"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
