Add,Edit and Delete trup from Firebase

--- a/app/src/main/res/layout/history_items.xml
+++ b/app/src/main/res/layout/history_items.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
+                android:maxWidth="200dp"
                 android:text="This is the trip description "
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -81,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:maxWidth="200dp"
                 app:layout_constraintStart_toStartOf="@+id/tvHistoryDestination"
                 app:layout_constraintTop_toTopOf="@+id/textView16" />
 
@@ -97,6 +99,8 @@
                 android:id="@+id/tvHistoryType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="200dp"
+                android:singleLine="true"
                 app:layout_constraintStart_toStartOf="@+id/tvHistoryDestination"
                 app:layout_constraintTop_toTopOf="@+id/textView16" />
 
@@ -113,6 +117,8 @@
                 android:id="@+id/tvHistorySource"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="200dp"
+                android:singleLine="true"
                 app:layout_constraintStart_toStartOf="@+id/tvHistoryDestination"
                 app:layout_constraintTop_toTopOf="@+id/textView8" />
 
@@ -121,6 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:maxWidth="200dp"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
                 app:layout_constraintTop_toTopOf="@+id/textView9" />
 
@@ -210,6 +217,8 @@
                 android:id="@+id/tvHistoryStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="200dp"
+                android:singleLine="true"
                 app:layout_constraintStart_toStartOf="@+id/tvHistoryDestination"
                 app:layout_constraintTop_toTopOf="@+id/textView11" />
 
