--- a/app/src/main/res/layout/history_items.xml
+++ b/app/src/main/res/layout/history_items.xml
@@ -83,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:maxWidth="200dp"
+                android:singleLine="true"
                 app:layout_constraintStart_toStartOf="@+id/tvHistoryDestination"
                 app:layout_constraintTop_toTopOf="@+id/textView16" />
 
@@ -128,6 +129,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:maxWidth="200dp"
+                android:singleLine="true"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
                 app:layout_constraintTop_toTopOf="@+id/textView9" />
 
