--- a/app/src/main/res/layout/upcoming_items.xml
+++ b/app/src/main/res/layout/upcoming_items.xml
@@ -178,10 +178,11 @@
                     android:id="@+id/btnUpcomingNote"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_marginStart="5dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/rounded_corner"
                     android:backgroundTint="@color/white"
                     android:drawableLeft="@drawable/note"
@@ -191,10 +192,26 @@
                     android:textAllCaps="false" />
 
                 <Button
+                    android:id="@+id/btnUpcomingDone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/rounded_corner"
+                    android:backgroundTint="@color/white"
+                    android:drawableLeft="@drawable/done"
+                    android:fontFamily="sans-serif"
+                    android:paddingStart="5dp"
+                    android:text="@string/done"
+                    android:textAllCaps="false" />
+
+                <Button
                     android:id="@+id/btnStartNavigation"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="5dp"
