--- a/app/src/main/res/layout/upcoming_items.xml
+++ b/app/src/main/res/layout/upcoming_items.xml
@@ -208,7 +208,7 @@
                     android:textAllCaps="false" />
 
                 <Button
-                    android:id="@+id/btnStartNavigation"
+                    android:id="@+id/btnAlarmStart"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:layout_marginStart="10dp"
